
package Model;

class Material {
    private String codigo;
    private String nombre;
    private String tipo;
    private double cantidad;
    private double costoUnitario;
}
