@startuml

' #############################
' #         ENUMS            #
' #############################

enum TipoIdentificacion {
    CEDULA
    PASAPORTE
    REGISTROCIVIL
    DIE
    TI
}

enum RolSistema {
    ADMINISTRADOR
    FUNCIONARIO_PUBLICO
    PROMOTOR
    OBRERO
    INSPECTOR_MUNICIPAL
    CIUDADANO
}

enum Prioridad {
    URGENTE
    ALTA
    MEDIA
    BAJA
}

enum EstprioadoTarea {
    PENDIENTE
    EN_PROGRESO
    COMPLETADA
    RETRASADA
}

enum TipoReparacion {
    ESTRUCTURAL
    ELECTRICA
    HIDRAULICA
    PAVIMENTACION
    OTROS
}

' #############################
' #         CLASES           #
' #############################

class Usuario {
    - nombre
    - password
    - fechaRegistro: LocalDate
    - activo: boolean
    - Rolsistema rol
    + login()
    + cambiarPassword()
}



class Persona{
    - tipoIdentificacion: TipoIdentificacion
    - numeroIdentificacion: String
    - primerNombre: String
    - segundoNombre: String
    - primerApellido: String
    - segundoApellido: String
    - email: String
    - telefono: String
}

class Obrero {
    - especialidad: String
    - fechaContratacion: LocalDate
    - salarioHora: double
    - seguroLaboral: boolean
    - certificaciones: List<String>
    + calcularHorasTrabajadas()
}

class Administrador {
    - esSuperAdmin: boolean = true
    - fechaCreacionCuenta: LocalDate
    - ultimoAcceso: LocalDateTime
    - ipUltimoAcceso: String
    + crearUsuario(Usuario): boolean
    + bloquearProyecto(Proyecto): void
    + generarBackup(): String
}

class InspectorMunicipal {
    - areaEspecializacion: String
    - instrumentosCertificados: List<String>
    + realizarInspeccion()
    + generarActa()
}

class Promotor {
    - matriculaProfesional: String
    - departamento: String
    - proyectosActivos: int
    + asignarTarea()
    + generarReporte()
}

class FuncionarioPublico {
    - cargo: String
    - nivelAcceso: int
    - departamento: String
    + aprobarLicencia()
    + fiscalizarObra()
}

class ProyectoReparacion {
    - codigo: String
    - nombre: String
    - direccion: String
    - tipoReparacion: TipoReparacion
    - fechaInicio: LocalDate
    - fechaFinEstimada: LocalDate
    - prioridad: Prioridad
    - presupuesto: double
    + calcularAvance()
    + actualizarPresupuesto()
}

class Tarea {
    - codigo: String
    - descripcion: String
    - horasEstimadas: double
    - horasReales: double
    - estado: EstadoTarea
    - fechaAsignacion: LocalDate
    - fechaFinalizacion: LocalDate
    + actualizarEstado()
    + registrarHoras()
}

class Material {
    - codigo: String
    - nombre: String
    - cantidad: double
    - unidad: String
    - costoUnitario: double
    - proveedor: String
    - normativa: String
    + validarStock()
    + actualizarCantidad()
}

class LicenciaReparacion {
    - codigo: String
    - fechaEmision: LocalDate
    - fechaExpiracion: LocalDate
    - documentos: List<String>
    + estaVencida()
    + renovar()
}

class ReporteCiudadano {
    - codigo: String
    - descripcion: String
    - direccion: String
    - fechaReporte: LocalDate
    - estado: String
    + cambiarEstado()
    + asignarResponsable()
}

' #############################
' #        RELACIONES        #
' #############################

Usuario <|-- Obrero
Usuario <|-- Promotor
Usuario <|-- FuncionarioPublico


ProyectoReparacion "1" -- "*" Tarea
ProyectoReparacion "1" -- "1" LicenciaReparacion
ProyectoReparacion "1" -- "*" Material

Tarea "1" -- "1" Obrero
Tarea "1" -- "*" Material

FuncionarioPublico "1" -- "*" LicenciaReparacion
FuncionarioPublico "1" -- "*" ProyectoReparacion
 
Promotor "1" -- "*" ProyectoReparacion
Promotor "1" -- "*" Tarea

ReporteCiudadano "1" -- "1" ProyectoReparacion

' #############################
' #         NOTAS            #
' #############################

note top of Usuario
  **Clase base para todos los roles**:
  - Todos los usuarios comparten
    propiedades básicas de identificación
  - Métodos comunes de autenticación
end note

note right of Obrero
  **Datos clave**:
  - Certificaciones validadas por
    el municipio
  - Seguro laboral obligatorio
end note

note left of ProyectoReparacion
  **Gestión completa**:
  - Prioridad determina recursos
  - Presupuesto actualizable
  - Tipos de reparación específicos
end note

@enduml






